@@ -59,6 +59,11 @@ INSERT INTO `creature_loot_template` (`Entry`, `Item`, `Chance`, `QuestRequired`
 DELETE FROM `creature_loot_template` WHERE `Entry` = 18952 AND `Item` = 25911;
 INSERT INTO `creature_loot_template` (`Entry`, `Item`, `Chance`, `QuestRequired`, `Comment`) VALUES (18952, 25911, 33, 1, 'Bonechewer Scavenger - Salvaged Wood');
 
+-- Digested Caracoli (Quest: A Rare Bean (Id: 9800))
+-- Talbuk Thorngrazer
+DELETE FROM `creature_loot_template` WHERE `Entry` = 17131 AND `Item` = 24419;
+INSERT INTO `creature_loot_template` (`Entry`, `Item`, `Chance`, `QuestRequired`, `Comment`) VALUES (17131, 24419, 31, 1, 'Talbuk Thorngrazer - Digested Caracoli');
+
 -- Salvaged Metal (Quest: I Work... For the Horde! (Id: 10086))
 -- Bonechewer Scavenger
 DELETE FROM `creature_loot_template` WHERE `Entry` = 18952 AND `Item` = 25912;
